--- a/css/tablet.css
+++ b/css/tablet.css
@@ -75,6 +75,14 @@ display: none;
       ),
       url(../images/herotb.png);
   }
+  @media (min-device-pixel-ratio: 2),
+(-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/herotb@2x.png);
+  }
+}
   .hero-title {
     font-size: 56px;
     line-height: 1.07;
@@ -108,18 +116,19 @@ display: none;
     width: 264px;
   }
   /* --------portfolio------- */
-  .about-list {
-    display: flex;
-    flex-wrap: wrap;
+  .portfolio-list {
     justify-content: center;
+  }
+  .about-list {
     row-gap: 72px;
     column-gap: 24px;
   }
   .about-item {
-    background: #ffffff;
     width: calc((100% - 48px) / 2);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-    transition: box-shadow var(--transition);
+  }
+  .modal {
+    width: 408px;
+    min-height: 584px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -129,10 +138,12 @@ display: none;
     flex-wrap: wrap;
   }
   /* -----------------footer---------------- */
+  .ending > .container {
+    width: 600px;
+  }
   .footer-wrap {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
   }
   .footer-text {
     margin-right: 24px;
