goit-markup-hw-07

--- a/css/desctop.css
+++ b/css/desctop.css
@@ -22,7 +22,10 @@
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../images/hero@2x.png);
+    background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ), url(../images/hero@2x.png);
   }
 }
   /* -------------benefits------------- */
