--- a/css/desctop.css
+++ b/css/desctop.css
@@ -18,7 +18,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero.png);
+      url(../images/hero.jpg);
   }
   @media (min-device-pixel-ratio: 2),
 (-webkit-min-device-pixel-ratio: 2),
@@ -28,7 +28,7 @@
     background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
-    ), url(../images/hero@2x.png);
+    ), url(../images/hero@2x.jpg);
   }
 }
   /* -------------benefits------------- */
