--- a/css/styles.css
+++ b/css/styles.css
@@ -125,24 +125,18 @@ transition: opacity var(--transition), pointer-events var(--transition), visibil
 }
 
 .header-btn-open {
-  position: absolute;
-  top: 24px;
- right: 24px;
   width: 32px; 
   height: 22px;
   padding: 0;
   line-height: 0;
   background-color: transparent;
 border: none;
-cursor: pointer;
+margin-left: auto;
 }
 .header-btn-icon-open {
   stroke: #2E2F42;
 }
 .header-btn-close {
-  position: fixed;
-    top: 40px;
-    right: 40px;
   width: 24px; 
   height: 24px;
   padding: 0;
@@ -209,7 +203,7 @@ text-transform: capitalize;
   border-radius: 50%;
   fill: #f4f4fd; 
  }
- .header-wrap > .content {
+ .header-wrap > .container {
   height: 100%;
   display: flex;
   flex-direction: column;
