--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ body.no-scroll {
   height: 100%;
   background: #FFFFFF;
 box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-padding: 40px;
+padding: 40px 0px;
 z-index: 1000;
 transition: opacity var(--transition), pointer-events var(--transition), visibility var(--transition);
 }
@@ -171,7 +171,7 @@ margin-bottom: 40px;
 }
 .header-wrap-contact .phone {
   font-weight: 600;
-font-size: 36px;
+font-size: 30px;
 line-height: 1.11;
 text-transform: capitalize;
  color: #4D5AE5; 
@@ -186,7 +186,7 @@ text-transform: capitalize;
 }
 .header-wrap-icon {
   display: flex;
-  gap: 56px;
+  gap: 46px;
   margin-top: 38px;
 }
 .header-wrap-icon-item {
@@ -712,8 +712,8 @@ width: 100%;
   width: 24px;
   height: 24px;
   box-sizing: border-box;
+  line-height: 0;
   border-radius: 50%;
-  display: block;
   margin-left: auto;
   transition: background var(--transition), border-radius var(--transition),
     fill var(--transition);
