--- a/css/tablet.css
+++ b/css/tablet.css
@@ -105,6 +105,7 @@ display: none;
     justify-content: center;
   }
   .about-list {
+    justify-content: flex-start;
     row-gap: 72px;
     column-gap: 24px;
   }
